replace easymock with mockito