@@ -8,12 +8,13 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
-import java.util.Collections;
+import java.util.List;
 import java.util.concurrent.ArrayBlockingQueue;
 import java.util.concurrent.BlockingQueue;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.TimeUnit;
 
+import static java.util.stream.IntStream.range;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.doAnswer;
@@ -24,48 +25,39 @@ import static org.mockito.Mockito.when;
 
 class LoaderManagerImplTest {
 
-    private LoaderManagerImpl loaderManager;
+    private final Loader loaderMock = mock(Loader.class);
+    private final WaitStrategy waitStrategyMock = mock(WaitStrategy.class);
     private BlockingQueue<UpdateResponse> queue;
-    private Loader loaderMock;
-    private WaitStrategy waitStrategyMock;
+    private LoaderManagerImpl loaderManager;
 
     @BeforeEach
     void setup() {
-        waitStrategyMock = mock(WaitStrategy.class);
         int batchSize = 3;
         queue = new ArrayBlockingQueue<>(batchSize); //default batch size of the loader
-        loaderMock = mock(Loader.class);
-        loaderManager = new LoaderManagerImpl(Collections.singletonList(loaderMock), batchSize, waitStrategyMock, mock(Monitor.class));
+        loaderManager = new LoaderManagerImpl(List.of(loaderMock), batchSize, waitStrategyMock, mock(Monitor.class));
     }
 
     @Test
     @DisplayName("Verify that the loader manager waits one pass when the queue does not yet contain sufficient elements")
     void batchSizeNotReachedWithinTimeframe() throws InterruptedException {
-        for (var i = 0; i < loaderManager.getBatchSize() - 1; i++) {
-            queue.offer(new UpdateResponse());
-        }
+        range(0, 3).forEach(i -> queue.offer(new UpdateResponse()));
         var completionSignal = new CountDownLatch(1);
-
-        // set the completion signal when the wait strategy was called
         when(waitStrategyMock.retryInMillis()).thenAnswer(i -> {
             completionSignal.countDown();
-            return 10L;
+            return 2L;
         });
 
         loaderManager.start(queue);
 
-        assertThat(completionSignal.await(20L, TimeUnit.MILLISECONDS)).isTrue();
+        assertThat(completionSignal.await(100L, TimeUnit.MILLISECONDS)).isTrue();
     }
 
     @Test
     @DisplayName("Verify that the LoaderManager does not sleep when a complete batch was processed")
     void batchSizeReachedWithinTimeframe() throws InterruptedException {
-        for (var i = 0; i < loaderManager.getBatchSize(); i++) {
-            queue.offer(new UpdateResponse());
-        }
+        range(0, 3).forEach(i -> queue.offer(new UpdateResponse()));
         var completionSignal = new CountDownLatch(1);
 
-        // set the completion signal when the wait strategy was called
         doAnswer(i -> {
             completionSignal.countDown();
             return null;
@@ -73,7 +65,6 @@ class LoaderManagerImplTest {
 
         loaderManager.start(queue);
 
-        //wait for completion signal
         assertThat(completionSignal.await(5, TimeUnit.SECONDS)).isTrue();
 
         verify(loaderMock, times(1)).load(any());
